test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/01-httproute-single-plugin.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: rate-limit-single
  namespace: ($namespace)
tags:
  - team-payments
  - env-e2e
plugin: rate-limiting
config:
  minute: 1000
  policy: local
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: httproute-single-plugin
  namespace: ($namespace)
spec:
  hostnames:
    - ($fqdn)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/get"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: rate-limit-single
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
