test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/01-prerequisites.yaml
---
# Namespace for Kong resources
apiVersion: v1
kind: Namespace
metadata:
  name: ($gateway_namespace)
---
# Namespace for default resources
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
kind: KonnectAPIAuthConfiguration
apiVersion: konnect.konghq.com/v1alpha1
metadata:
  name: konnect-api-auth-dev-1
  namespace: ($gateway_namespace)
spec:
  type: token
  token: (env('KONNECT_TOKEN'))
  serverURL: (env('KONNECT_SERVER_URL') || 'eu.api.konghq.tech')
---
kind: GatewayConfiguration
apiVersion: gateway-operator.konghq.com/v2beta1
metadata:
  name: ($gateway_configuration_name)
  namespace: ($gateway_namespace)
spec:
  konnect:
    authRef:
      name: konnect-api-auth-dev-1
  dataPlaneOptions:
    deployment:
      podTemplateSpec:
        spec:
          containers:
          - name: proxy
            image: ($gateway_dataplane_image)
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($gateway_class_name)
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: ($gateway_name)
    namespace: ($gateway_namespace)
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($gateway_name)
  namespace: ($gateway_namespace)
spec:
  gatewayClassName: ($gateway_class_name)
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
