test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/02-httproute-extensionref-filter-single-plugin.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path)
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: ($rate_limiting_plugin_name)
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: ($rate_limiting_plugin_name)
  namespace: ($http_route_namespace)
plugin: rate-limiting
config:
 minute: 20
 policy: local
