test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/02-httproute-multiple-plugins.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: rate-limit-multiple
  namespace: ($namespace)
plugin: rate-limiting
config:
  minute: 1000
  policy: local
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: response-transformer-multiple
  namespace: ($namespace)
plugin: response-transformer
config:
  add:
    headers:
      - "X-Add:foo"
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: httproute-multiple-plugins
  namespace: ($namespace)
spec:
  hostnames:
    - ($fqdn)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/get"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: rate-limit-multiple
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: response-transformer-multiple
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
