test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/03-httproute-plugin-update.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: response-transformer-update
  namespace: ($namespace)
plugin: response-transformer
config:
  add:
    headers:
      - "X-Test:initial"
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: httproute-plugin-update
  namespace: ($namespace)
spec:
  hostnames:
    - ($fqdn)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/get"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: response-transformer-update
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
