test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/03-kongplugin-update-patch.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: response-transformer-update
  namespace: ($namespace)
plugin: response-transformer
config:
  add:
    headers:
      - "X-Test:updated"
