test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/04-httproute-add-filter-base.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: ($rate_limiting_plugin_name)
  namespace: ($namespace)
plugin: rate-limiting
config:
  minute: 1000
  policy: local
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($namespace)
spec:
  hostnames:
    - ($fqdn)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/get"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: ($rate_limiting_plugin_name)
      backendRefs:
        - name: ($httpbin_deployment_name)
          port: 80
