test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/04-httproute-extensionref-filter-update-kongplugin-patch.yaml
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: ($rate_limiting_plugin_name)
  namespace: ($http_route_namespace)
plugin: rate-limiting
config:
 minute: 30
 policy: local
