test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/04-kongplugin-add.yaml
---
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: ($response_transformer_plugin_name)
  namespace: ($namespace)
plugin: response-transformer
config:
  add:
    headers:
      - "X-Added:dynamically"
