test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/05-httproute-extensionref-add-filter-patch.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path)
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: ($rate_limiting_plugin_name)
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: ($response_transformer_plugin_name)            
      backendRefs:
        - name: ($httpbin_service_name)
          port: 80
--- 
kind: KongPlugin
apiVersion: configuration.konghq.com/v1
metadata:
  name: ($response_transformer_plugin_name)
  namespace: ($http_route_namespace)
plugin: response-transformer
config:
  add:
    headers:
     - "X-Add:foo"
