test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/00-assert-httpbin.yaml
---
# Assert httpbin Service exists
apiVersion: v1
kind: Service
metadata:
  name: ($httpbin_service_name)
  namespace:  ($httpbin_service_namespace)
---
# Assert httpbin Deployment is ready
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ($httpbin_service_name)
  namespace: ($httpbin_service_namespace)
status:
  # Filter conditions array to check for Available condition
  (conditions[?type == 'Available']):
    - status: 'True'
  readyReplicas: 1
  replicas: 1
