test/e2e/chainsaw/hybridgateway/httproute-extenstionref-filter/03-assert-kongplugin-updated.yaml
---
apiVersion: configuration.konghq.com/v1
kind: KongPlugin
metadata:
  name: response-transformer-update
  namespace: ($namespace)
plugin: response-transformer
config:
  add:
    headers:
      - "X-Test:updated"
